--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -5,6 +5,7 @@ $roboto: "Roboto";
 //Colors
 $font-color: #5f6c72;
 $white: #ffffff;
+$gradient-blue: linear-gradient(to bottom, #0075be 0%,#243072 100%);
 
 //Width
 $width-320: 320px;
@@ -12,3 +13,4 @@ $width-375: 375px;
 $width-420: 420px;
 $width-768: 768px;
 $width-1024: 1024px;
+$width-1440: 1440px;
