--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -2,4 +2,17 @@
   background: url(../imgs/appBackgrounds/beePattern.png), $gradient-blue;
   color: $white;
   padding: 7.81% 0; //25px 0
+
+  h1{
+    width: 64%;
+    text-align: right;
+    display: inline-block;
+    margin-right: 10px;
+  }
+
+  div{
+    width: 35%;
+    display: inline-block;
+    position: absolute;
+  }
 }
