--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,14 +4,14 @@
   padding: 7.81% 0; //25px 0
 
   h1{
-    width: 64%;
+    width: 60%;
     text-align: right;
     display: inline-block;
-    margin-right: 10px;
+    margin-right: 5%;
   }
 
   div{
-    width: 35%;
+    width: 40%;
     display: inline-block;
     position: absolute;
   }
