--- a/sass/mediaQueries.scss
+++ b/sass/mediaQueries.scss
@@ -1,23 +1,51 @@
 @media all and (min-width: $width-375) {
+  #headerComponent{
+    h1{
+      width: 57%;
+    }
+  
+    div{
+      width: 43%;
+    }
+  }
 }
 
 @media all and (min-width: $width-420) {
   #headerComponent {
     padding: 4.76% 0; //20px 0
+
+    h1{
+      width: 55%;
+    }
+  
+    div{
+      width: 45%;
+    }
   }
 }
 
 @media all and (min-width: $width-768) {
+  #headerComponent {
+    h1{
+      width: 50%;
+      margin-right: 3%;
+    }
+  
+    div{
+      width: 50%;
+    }
+  }
 }
 
 @media all and (min-width: $width-1024) {
   #headerComponent {
     padding: 2.76% 0; //18px 0
-  }
 
-  #headerComponent h1 {
-    font-size: 36px; //30px
-    line-height: 40px; //34px
+    h1 {
+      font-size: 2.25rem; //30px
+      line-height: 2.5rem; //34px
+      margin-right: 1%;
+    }
   }
 }
 
