--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -2,6 +2,7 @@ html{
     min-width: $width-320;
     font-size: 16px;
     font-family: $roboto, Arial, Helvetica, sans-serif;
+    text-align: justify;
 }
 
 body{
@@ -11,10 +12,21 @@ body{
 
 h1, h2, h3, h4, h5, h6{
     font-family: $a-Bee-Zee, "Arial Black", Gadget, sans-serif;
-    text-align: center;
 }
 
 h1{
     font-size: 1.875rem; //30px
     line-height: 2.125rem; //34px
+    text-align: center;
+}
+
+h2{
+    font-size: 1.75rem; //28px
+    line-height: 1.875rem; //30px
+    text-align: center;
+}
+
+h3{
+    font-size: 1.5rem; //24px
+    line-height: 1.75rem; //28px
 }
