--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,7 @@
 @import "_global.scss";
 @import "_header.scss";
 @import "_footer.scss";
-@import "_cards.scss";
+@import "_bees.scss";
 @import "_todos.scss";
 @import "_post.scss";
 @import "_photos.scss";
