--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -30,3 +30,17 @@ h3{
     font-size: 1.5rem; //24px
     line-height: 1.75rem; //28px
 }
+
+main{
+    display: flow-root;
+    
+    section:first-child{
+        width: 40%;
+        float: left;
+    }
+
+    section:nth-child(2){
+        width: 60%;
+        float: right;
+    };
+}
