--- a/sass/mediaQueries.scss
+++ b/sass/mediaQueries.scss
@@ -5,7 +5,7 @@
     }
   
     div{
-      width: 43%;
+      width: 30%;
     }
   }
 }
@@ -19,7 +19,7 @@
     }
   
     div{
-      width: 45%;
+      width: 30%;
     }
   }
 }
@@ -32,7 +32,7 @@
     }
   
     div{
-      width: 50%;
+      width: 30%;
     }
   }
 }
@@ -45,6 +45,10 @@
       font-size: 2.25rem; //30px
       line-height: 2.5rem; //34px
       margin-right: 1%;
+    }
+
+    div{
+      width: 30%;
     }
   }
 }
