--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -4,7 +4,8 @@ $roboto: "Roboto";
 
 //Colors
 $font-color: #5f6c72;
-$white: #ffffff;
+$white: #FFF;
+$black: #000;
 $gradient-blue: linear-gradient(to bottom, #0075be 0%,#243072 100%);
 
 //Width
