--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ html {
 
 body {
   width: 100%;
-  background-color: #ffffff; }
+  background-color: #FFF; }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "ABeeZee", "Arial Black", Gadget, sans-serif; }
@@ -36,7 +36,7 @@ main {
 
 #headerComponent {
   background: url(../imgs/appBackgrounds/beePattern.png), linear-gradient(to bottom, #0075be 0%, #243072 100%);
-  color: #ffffff;
+  color: #FFF;
   padding: 7.81% 0; }
   #headerComponent h1 {
     width: 55%;
@@ -47,6 +47,19 @@ main {
     width: 30%;
     display: inline-block;
     position: absolute; }
+
+.beeComponent {
+  width: 50%;
+  margin: 5% auto;
+  padding: 10px 20px;
+  border: 1px solid #000;
+  border-radius: 10%; }
+  .beeComponent h3 {
+    margin-bottom: 5%; }
+  .beeComponent p {
+    margin-bottom: 2%; }
+    .beeComponent p b {
+      font-weight: 700; }
 
 @media all and (min-width: 375px) {
   #headerComponent h1 {
