--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -41,6 +41,7 @@ main{
 
     section:nth-child(2){
         width: 60%;
-        float: right;
+        float: left;
+        margin-top: 2%;
     };
 }
