--- a/sass/_bees.scss
+++ b/sass/_bees.scss
@@ -1,18 +1,34 @@
 .beeComponent {
-  width: 50%;
+  width: 85%;
   margin: 5% auto;
   padding: 10px 20px;
   border: 1px solid $black;
-  border-radius: 10%;
+  border-radius: 5%;
+  display: flow-root;
 
-  h3{
-      margin-bottom: 5%;
+  #beeImgContainer{
+    width: 40%;
+    float: left;
+    img{
+      width: 80%;
+      margin-top: 2%;
+      padding: 2% 0;
+    }
   }
 
-  p {
+  #beeContainerData {
+    width: 60%;
+    float: left;
+
+    h3 {
+      margin-bottom: 5%;
+    }
+
+    p {
       margin-bottom: 2%;
-    b {
+      b {
         font-weight: 700;
+      }
     }
   }
 }
