--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,5 +5,5 @@
 @import "_bees.scss";
 @import "_todos.scss";
 @import "_post.scss";
-@import "_photos.scss";
+@import "albums.scss";
 @import "mediaQueries.scss";
