--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,12 @@ body {
   width: 100%;
   background-color: #FFF; }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "ABeeZee", "Arial Black", Gadget, sans-serif; }
 
 h1 {
@@ -52,26 +57,28 @@ b {
     display: inline-block;
     position: absolute; }
 
-.beeComponent {
-  width: 85%;
-  margin: 5% auto;
-  padding: 3.1% 6.25%;
-  border-radius: 20px;
-  display: flow-root; }
-  .beeComponent #beeImgContainer {
-    width: 40%;
-    float: left; }
-    .beeComponent #beeImgContainer img {
-      width: 80%;
-      margin-top: 2%;
-      padding: 2% 0; }
-  .beeComponent #beeContainerData {
-    width: 60%;
-    float: left; }
-    .beeComponent #beeContainerData h3 {
-      margin-bottom: 5%; }
-    .beeComponent #beeContainerData p {
-      margin-bottom: 2%; }
+#beesComponent {
+  overflow: scroll; }
+  #beesComponent .beeComponent {
+    width: 85%;
+    margin: 5% auto;
+    padding: 3.1% 6.25%;
+    border-radius: 20px;
+    display: flow-root; }
+    #beesComponent .beeComponent #beeImgContainer {
+      width: 40%;
+      float: left; }
+      #beesComponent .beeComponent #beeImgContainer img {
+        width: 80%;
+        margin-top: 2%;
+        padding: 2% 0; }
+    #beesComponent .beeComponent #beeContainerData {
+      width: 60%;
+      float: left; }
+      #beesComponent .beeComponent #beeContainerData h3 {
+        margin-bottom: 5%; }
+      #beesComponent .beeComponent #beeContainerData p {
+        margin-bottom: 2%; }
 
 #postsComponent {
   width: 56%;
