--- a/sass/_bees.scss
+++ b/sass/_bees.scss
@@ -1,30 +1,34 @@
-.beeComponent {
-  width: 85%;
-  margin: 5% auto;
-  padding: 3.1% 6.25%; //10px 20px
-  border-radius: 20px;
-  display: flow-root;
+#beesComponent{
+  overflow: scroll; // FUNCIONA PERO NO SIRVE EL HEIGHT VH EN NINGUN LADO
 
-  #beeImgContainer{
-    width: 40%;
-    float: left;
-    img{
-      width: 80%;
-      margin-top: 2%;
-      padding: 2% 0;
+  .beeComponent {
+    width: 85%;
+    margin: 5% auto;
+    padding: 3.1% 6.25%; //10px 20px
+    border-radius: 20px;
+    display: flow-root;
+      
+    #beeImgContainer{
+      width: 40%;
+      float: left;
+      img{
+        width: 80%;
+        margin-top: 2%;
+        padding: 2% 0;
+      }
     }
-  }
-
-  #beeContainerData {
-    width: 60%;
-    float: left;
-
-    h3 {
-      margin-bottom: 5%;
-    }
-
-    p {
-      margin-bottom: 2%;
+  
+    #beeContainerData {
+      width: 60%;
+      float: left;
+  
+      h3 {
+        margin-bottom: 5%;
+      }
+  
+      p {
+        margin-bottom: 2%;
+      }
     }
   }
 }
