--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ html {
 
 body {
   width: 100%;
+  height: 100vh;
   background-color: #FFF; }
 
 h1,
@@ -44,6 +45,7 @@ b {
   font-weight: 700; }
 
 #headerComponent {
+  height: 5vh;
   background: url(../imgs/appBackgrounds/beePattern.png), linear-gradient(to bottom, #0075be 0%, #243072 100%);
   color: #FFF;
   padding: 7.81% 0; }
@@ -58,18 +60,19 @@ b {
     position: absolute; }
 
 #beesComponent {
-  overflow: scroll; }
+  overflow-y: scroll;
+  height: 95vh; }
   #beesComponent .beeComponent {
     width: 85%;
     margin: 5% auto;
-    padding: 3.1% 6.25%;
+    padding: 3.1% 6.25% 3.1% 3.25%;
     border-radius: 20px;
     display: flow-root; }
     #beesComponent .beeComponent #beeImgContainer {
-      width: 40%;
+      width: 30%;
       float: left; }
       #beesComponent .beeComponent #beeImgContainer img {
-        width: 80%;
+        width: 90%;
         margin-top: 2%;
         padding: 2% 0; }
     #beesComponent .beeComponent #beeContainerData {
@@ -78,7 +81,7 @@ b {
       #beesComponent .beeComponent #beeContainerData h3 {
         margin-bottom: 5%; }
       #beesComponent .beeComponent #beeContainerData p {
-        margin-bottom: 2%; }
+        margin-bottom: 1rem; }
 
 #postsComponent {
   width: 56%;
@@ -115,5 +118,5 @@ b {
     #headerComponent div {
       width: 30%; }
   .beeComponent:hover {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: #f7f7f7;
     border-radius: 10px; } }
