--- a/sass/_bees.scss
+++ b/sass/_bees.scss
@@ -1,33 +1,35 @@
-#beesComponent{
-  overflow: scroll; // FUNCIONA PERO NO SIRVE EL HEIGHT VH EN NINGUN LADO
+#beesComponent {
+  overflow-y: scroll;
+  height: 95vh;
 
   .beeComponent {
     width: 85%;
     margin: 5% auto;
-    padding: 3.1% 6.25%; //10px 20px
+    padding: 3.1% 6.25% 3.1% 3.25%; //10px 20px
     border-radius: 20px;
     display: flow-root;
-      
-    #beeImgContainer{
-      width: 40%;
+
+    #beeImgContainer {
+      width: 30%;
       float: left;
-      img{
-        width: 80%;
+
+      img {
+        width: 90%;
         margin-top: 2%;
         padding: 2% 0;
       }
     }
-  
+
     #beeContainerData {
       width: 60%;
       float: left;
-  
+
       h3 {
         margin-bottom: 5%;
       }
-  
+
       p {
-        margin-bottom: 2%;
+        margin-bottom: 1rem;
       }
     }
   }
