--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,4 +1,5 @@
 #headerComponent {
+  height: 5vh;
   background: url(../imgs/appBackgrounds/beePattern.png), $gradient-blue;
   color: $white;
   padding: 7.81% 0; //25px 0
