--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ html {
 
 body {
   height: 100vh;
+  overflow: hidden;
 }
 
 h1,
@@ -21,24 +22,27 @@ h6 {
 }
 
 #beesComponent,
-#beesInformation {
+#beeInformation {
   height: 85vh;
   overflow-y: scroll;
 }
 
-#beesComponent::-webkit-scrollbar {
+#beesComponent::-webkit-scrollbar,
+#beeInformation::-webkit-scrollbar {
   width: 12px;
   background-color: #F5F5F5;
 }
 
-#beesComponent::-webkit-scrollbar-thumb {
+#beesComponent::-webkit-scrollbar-thumb,
+#beeInformation::-webkit-scrollbar-thumb {
   border-radius: 10px;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
   background-color: #e0e0e0;
 }
 
-#beesComponent::-webkit-scrollbar-track {
+#beesComponent::-webkit-scrollbar-track,
+#beeInformation::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
