--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+:root{
+  --light-grey: #F5F5F5;
+  --light-blue: #f0f8ff;
+}
+
 html {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
@@ -30,7 +35,7 @@ h6 {
 #beesComponent::-webkit-scrollbar,
 #beeInformation::-webkit-scrollbar {
   width: 12px;
-  background-color: #F5F5F5;
+  background-color: var(--light-grey);
 }
 
 #beesComponent::-webkit-scrollbar-thumb,
@@ -46,11 +51,20 @@ h6 {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
-  background-color: #F5F5F5;
+  background-color: var(--light-grey);
 }
 
 #beeInformation {
   background: linear-gradient(to bottom, #243072 0%, #0075be 100%);
+}
+
+#beeContainerData{
+  position: relative;
+}
+
+#beeContainerData a{
+  display: block;
+  word-wrap: break-word;
 }
 
 .transparentBackground {
@@ -59,4 +73,8 @@ h6 {
 
 .photoContainer {
   float: left;
+}
+
+.commentComponent{
+  background: var(--light-blue);
 }
